2008-07-21 Harri Pitkänen <hatapitk@iki.fi>

	* Add setting (checkbox) for compound word hyphenation and
	  store the value to the registry.
	* Use new compound word hyphenation setting when hyphenating.

2008-07-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add settings dialog.
	* Add build option for disabling the grammar checker.

2008-07-18 Harri Pitkänen <hatapitk@iki.fi>

	* Add icon and publisher information for new extension manager.

2008-07-10 Harri Pitkänen <hatapitk@iki.fi>

	* Build fixes, thanks to Caolan McNamara from RedHat.

2008-03-30 Harri Pitkänen <hatapitk@iki.fi>

	* Add stub for grammar checker implementation.
	* Documentation fixes.

2008-03-24 Harri Pitkänen <hatapitk@iki.fi>

	* Respect HyphMinLeading and HyphMinTrailing in
	  Hyphenator::createPossibleHyphens.

2008-03-23 Harri Pitkänen <hatapitk@iki.fi>

	* Update license to GPL v3 or later.
	* Update extension version and required OOo version for
	  openoffice.org-voikko 3.0 and OOo 3.0.
	* Use PackageInformationProvider to get the extension installation
	  path.
	* Use thread unsafe UNO purpose environment.

2008-01-23 Harri Pitkänen <hatapitk@iki.fi>

	* Add Makefile targets 'extension-files', 'oxt' and
	  'install-unpacked'. 'extension-files' is the new default,
	  'all' refers to 'oxt'.

2008-01-22 Harri Pitkänen <hatapitk@iki.fi>

	* Use locale encoding with file names.
	* Add displayname to description.xml for OOo 2.4.

2008-01-19 Harri Pitkänen <hatapitk@iki.fi>

	* Standalone extension support for OS X 10.5.
	* Update README.

2008-01-18 Harri Pitkänen <hatapitk@iki.fi>

	* Makefile support for OS X 10.5 (Intel).

2007-11-17 Harri Pitkänen <hatapitk@iki.fi>

	* Add magic key "VoikkoGetStatusInformation" for
	  obtaining diagnostics from production builds.
	* Increase version number to 2.2.

2007-08-19 Harri Pitkänen <hatapitk@iki.fi>

	* Update README
	* Makefile cleanup

2007-06-19 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt for libvoikko 1.5
	* Increase version number to 2.1